--- a/src/styles.scss
+++ b/src/styles.scss
@@ -11,9 +11,18 @@ body {
       background: #99A6B7;
       height: 27px !important;
       width: 3px !important;
-      border-radius: 20%;
+      border-radius: 1.5px;
       background-image: none !important;
     }
   }
+
+}
+
+@media (max-width: 1680px) {
+  .as-split-area .as-min {
+    order: 0;
+    flex: 0 0 calc(20% - 1.26px) !important;
+  }
+
 
 }
